--- a/html.html
+++ b/html.html
@@ -1,4 +1,12 @@
-<!doctype HTML>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Belajar HTML</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web Dio Araya</title>
 </head>
+<body>
+  <!-- Isi body Awal -->
+   
+</body>
+</html>
